WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52966
Transparent windows with compositing WebKit2 content show garbage
https://bugs.webkit.org/show_bug.cgi?id=52966
Summary
Transparent windows with compositing WebKit2 content show garbage
Anders Carlsson
Reported
2011-01-22 11:44:28 PST
Transparent windows with compositing WebKit2 content show garbage
Attachments
Patch
(2.18 KB, patch)
2011-01-22 11:45 PST
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-01-22 11:45:53 PST
Created
attachment 79852
[details]
Patch
Anders Carlsson
Comment 2
2011-01-22 11:56:44 PST
Committed
r76453
: <
http://trac.webkit.org/changeset/76453
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug