2011-01-22  Anders Carlsson  <andersca@apple.com>

Reviewed by Sam Weinig.

        Transparent windows with compositing WebKit2 content show garbage
        https://bugs.webkit.org/show_bug.cgi?id=52966
        <rdar://problem/8765051>

        * UIProcess/mac/LayerBackedDrawingAreaProxyMac.mm:
        (WebKit::LayerBackedDrawingAreaProxy::paint):
        If the WKView should draw transparent background, do so.


Canonical link: https://commits.webkit.org/66687@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76453 268f45cc-cd09-0410-ab3c-d52691b4dbfc